Best card font-size (.inBestHand) lowered so as to avoid 10 overlap in mobile interface

--- a/src/app/poker/hand/hand.component.css
+++ b/src/app/poker/hand/hand.component.css
@@ -26,7 +26,7 @@ mat-card.hand.best-hand {
 
 .inBestHand {
   background: greenyellow;
-  font-size: 20pt;
+  font-size: 16pt;
   font-weight: bold;
 }
 
